--- a/app/src/main/res/layout/settings_fragment_layout.xml
+++ b/app/src/main/res/layout/settings_fragment_layout.xml
@@ -12,17 +12,21 @@
         android:textSize="40dp"
         android:layout_gravity="center"
         android:layout_margin="20dp"
-        android:gravity="top"/>
+        android:gravity="top"
+        android:textStyle="bold"
+        />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Edit Notifications"
-        android:textSize="16dp"
+        android:textSize="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
+        android:background="@drawable/mybutton"
+        android:textAppearance="@style/NewCourseColorHint"
 
         />
 
@@ -37,6 +41,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
+        android:textStyle="bold"
 
         />
         <SeekBar
@@ -57,6 +62,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
+        android:textStyle="bold"
 
         />
 
@@ -64,6 +70,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:background="@drawable/mybutton"
+        android:textAppearance="@style/NewCourseColorHint"
+        android:layout_marginBottom="10dp"
+
         />
 
 
@@ -75,18 +85,21 @@
         android:layout_marginBottom="10dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
-        android:textSize="16dp"
+        android:textSize="20dp"
+        android:background="@drawable/mybutton"
+        android:textAppearance="@style/NewCourseColorHint"
         />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Dogs Info"
-        android:textSize="16dp"
+        android:textSize="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
-
+        android:background="@drawable/mybutton"
+        android:textAppearance="@style/NewCourseColorHint"
         />
 </LinearLayout>
