--- a/app/src/main/res/layout/meals_fragment_layout.xml
+++ b/app/src/main/res/layout/meals_fragment_layout.xml
@@ -3,4 +3,58 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <LinearLayout
+            android:id="@+id/linear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:paddingBottom="2dp"
+            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+            android:layout_centerHorizontal="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="left"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:layout_marginEnd="15dp"
+                android:text="@string/date_time" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="right"
+                android:textSize="24dp"
+                android:textStyle="bold"
+                android:text="@string/amount_g" />
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/meals_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linear"
+            />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="3dp"
+            android:layout_marginBottom="2dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:tooltipText="@string/add_meal"
+            android:src="@drawable/add_icon"
+            android:id="@+id/add_action_bar"
+
+
+          />
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
